ARBEIT: Fix header navi on IE10

--- a/sass/web.arbeit/modules/_nav.sass
+++ b/sass/web.arbeit/modules/_nav.sass
@@ -424,3 +424,7 @@ $nav-color-border: #444
 
 			&__dropdown
 				white-space: nowrap
+
+			// specificity war olé
+			&__sales--mobile
+				display: none
